# VE280-Lab-7-SU2020

./: .gitignore  CMakeLists.txt  Makefile  README.md  course.cpp  course.h
.github/workflows/: c-cpp.yml
test/: simpletest.cpp
